--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <nav class="submenu">
           <ul class="submenu list">
             <li class="submenu-item">
-              <a href="index.html" class="link">Студия</a>
+              <a href="index.html" class="link current">Студия</a>
             </li>
             <li class="submenu-item">
               <a href="portfolio.html" class="link">Портфолио</a>
             </li>
-            <li class="submenu-item"><a href="#" class="link">Контакты</a></li>
+            <li class="submenu-item">
+              <a href="#" class="link">Контакты</a></li>
           </ul>
         </nav>
         <div class="contacts">
@@ -303,32 +304,32 @@
           <h2 class="second-header">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon ya">
+              <svg class="clients-icon" width="41" height="47">
                 <use href="./images/symbol-defs.svg#group1"></use>
               </svg>
             </a></li>
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon here">
+              <svg class="clients-icon" width="40" height="52">
                 <use href="./images/symbol-defs.svg#group2"></use>
               </svg>
             </a></li>
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon company">
+              <svg class="clients-icon" width="44" height="42">
                 <use href="./images/symbol-defs.svg#group3"></use>
               </svg>
             </a></li>
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon foster">
+              <svg class="clients-icon" width="85" height="41">
                 <use href="./images/symbol-defs.svg#group4"></use>
               </svg>
             </a></li>
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon brand">
+              <svg class="clients-icon" width="63" height="46">
                 <use href="./images/symbol-defs.svg#group5"></use>
               </svg>
             </a></li>
             <li class="clients-item"><a class="clients-link" href="#">
-              <svg class="clients-icon line">
+              <svg class="clients-icon" width="94" height="44">
                 <use href="./images/symbol-defs.svg#group6"></use>
               </svg>
             </a></li>
