--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <nav class="submenu">
           <ul class="submenu list">
             <li class="submenu-item"><a href="index.html" class="link">Студия</a></li>
-            <li class="submenu-item"><a href="portfolio.html" class="link">Портфолио</a></li>
+            <li class="submenu-item"><a href="portfolio.html" class="link current">Портфолио</a></li>
             <li class="submenu-item"><a href="#" class="link">Контакты</a></li>
           </ul>
         </nav>
